// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModulesSection component should render a ModuleSection component with token and gauges 1`] = `
<div
  className="admin-box"
>
  <SectionTitle
    annotation="* Fields are required."
    title="Configure the voting modules"
  />
  <div
    className="admin-content"
  >
    <div
      className="form-container"
    >
      <div
        className="vote-modules-form"
      >
        <Checkbox
          bsClass="checkbox"
          checked={false}
          disabled={false}
          id="token-checkbox"
          inline={false}
          onChange={[Function]}
          title=""
        >
          <Connect(Helper)
            classname="inline checkbox-title"
            helperText="The token vote module allows you to select propositions proportionnaly. Each participant has a certain amount of tokens et will have to spread them on the different propositions"
            helperUrl="/static2/img/helpers/helper4.png"
            label="Tokens vote"
          />
        </Checkbox>
        Immutable.List []
        <div
          className="separator"
        />
        <Checkbox
          bsClass="checkbox"
          checked={true}
          disabled={false}
          id="gauge-checkbox"
          inline={false}
          onChange={[Function]}
          title=""
        >
          <Connect(Helper)
            classname="inline checkbox-title"
            helperText="You can choose to have one or several gages"
            helperUrl="/static2/img/helpers/helper3.png"
            label="Gauge(s) vote"
          />
        </Checkbox>
        <div
          className="module-form"
        >
          <div
            className="flex"
          >
            <label
              htmlFor="input-dropdown-addon"
            >
              <Translate
                value="administration.gaugeNumber"
              />
            </label>
            <Connect(Helper)
              helperText="Define gauges number"
              helperUrl="/static2/img/helpers/helper2.jpg"
            />
          </div>
          <SplitButton
            className="admin-dropdown"
            id="input-dropdown-addon"
            onSelect={[Function]}
            required={true}
            title={1}
          >
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              eventKey={1}
              header={false}
            >
              1
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              eventKey={2}
              header={false}
            >
              2
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              eventKey={3}
              header={false}
            >
              3
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              eventKey={4}
              header={false}
            >
              4
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              eventKey={5}
              header={false}
            >
              5
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              eventKey={6}
              header={false}
            >
              6
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              eventKey={7}
              header={false}
            >
              7
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              eventKey={8}
              header={false}
            >
              8
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              eventKey={9}
              header={false}
            >
              9
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              eventKey={10}
              header={false}
            >
              10
            </MenuItem>
          </SplitButton>
        </div>
        Immutable.List [
          <Connect(DumbGaugeForm)
            editLocale="en"
            id="my-num-gauge"
            index={0}
          />,
        ]
        <div
          className="margin-m"
        >
          <label
            htmlFor="seeCurrentVotes"
          >
            <Translate
              value="administration.seeCurrentVotes"
            />
          </label>
          <Radio
            bsClass="radio"
            checked={true}
            disabled={false}
            id="seeCurrentVotes"
            inline={false}
            name="seeCurrentVotes"
            onChange={[Function]}
            title=""
          >
            <Translate
              value="administration.resultsVisible"
            />
          </Radio>
          <Radio
            bsClass="radio"
            checked={false}
            disabled={false}
            inline={false}
            name="seeCurrentVotes"
            onChange={[Function]}
            title=""
          >
            <Translate
              value="administration.resultsNotVisible"
            />
          </Radio>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ModulesSection component should render a ModulesSection component without any TokensForm nor GaugeForm 1`] = `
<div
  className="admin-box"
>
  <SectionTitle
    annotation="* Fields are required."
    title="Configure the voting modules"
  />
  <div
    className="admin-content"
  >
    <div
      className="form-container"
    >
      <div
        className="vote-modules-form"
      >
        <Checkbox
          bsClass="checkbox"
          checked={false}
          disabled={false}
          id="token-checkbox"
          inline={false}
          onChange={[Function]}
          title=""
        >
          <Connect(Helper)
            classname="inline checkbox-title"
            helperText="The token vote module allows you to select propositions proportionnaly. Each participant has a certain amount of tokens et will have to spread them on the different propositions"
            helperUrl="/static2/img/helpers/helper4.png"
            label="Tokens vote"
          />
        </Checkbox>
        Immutable.List []
        <Checkbox
          bsClass="checkbox"
          checked={false}
          disabled={false}
          id="gauge-checkbox"
          inline={false}
          onChange={[Function]}
          title=""
        >
          <Connect(Helper)
            classname="inline checkbox-title"
            helperText="You can choose to have one or several gages"
            helperUrl="/static2/img/helpers/helper3.png"
            label="Gauge(s) vote"
          />
        </Checkbox>
        Immutable.List []
      </div>
    </div>
  </div>
</div>
`;
